# insight-docs

./: .dockerignore  .env.example  .flake8  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  project_structure.md  pyproject.toml
api_gateway/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
api_gateway/api/v1/: api_routes.py  router.py
api_gateway/api/v1/endpoints/: auth.py  document_processing.py  document_uploads.py  extractions.py  health.py  stats.py  users.py  workflows.py
api_gateway/core/: config.py  exceptions.py
api_gateway/schemas/: authentication_schema.py  common_schema.py  document_extraction_schema.py  document_processing_schema.py  document_schema.py  system_schema.py  workflow_schema.py
api_gateway/services/: authentication_service.py  document_processing_service.py  document_upload_service.py  entity_extraction_service.py  user_service.py  workflow_service.py
api_gateway/utils/: proxy.py
data/models/document_classifier/: model.py
data/models/entity_extractor/: model.py
data/models/layout_analyzer/: model.py
document_ingestion/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
document_ingestion/api/v1/: api_routes.py
document_ingestion/api/v1/endpoints/: document_uploads.py  document_validation.py  health.py
document_ingestion/core/: config.py
document_ingestion/schemas/: document_schema.py
document_ingestion/services/: document_service.py
document_processing/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
document_processing/api/v1/endpoints/: health.py
document_processing/core/: config.py
entity_extraction/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
entity_extraction/api/v1/: api_routes.py
entity_extraction/api/v1/endpoints/: health.py
entity_extraction/core/: config.py
scripts/: check_health.py  deploy.sh  install_dependencies.sh  setup.sh  start.sh  test.sh
shared/: .env.example  pyproject.toml
shared/config/: settings.py
shared/database/: mongodb.py  postgres.py
shared/exceptions/: __init__.py  base.py
shared/models/: document.py  entity.py
shared/utils/: file_utils.py  logging.py  request_handler.py
task_orchestration/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
task_orchestration/api/v1/: api_routes.py
task_orchestration/api/v1/endpoints/: health.py
task_orchestration/core/: config.py
task_orchestration/scripts/: start.sh
task_orchestration/tasks/: document_service.py
tests/: conftest.py
