[tool.poetry]
name = "api_gateway"
version = "0.1.0"
description = "API Gateway service for the InsightDocs document processing pipeline"
authors = ["hbobev"]
packages = [{include = "**/*.py"}]

[tool.poetry.dependencies]
python = "^3.12"
# Mainly uses the shared dependencies

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
