[tool.poetry]
name = "document-processing"
version = "0.1.0"
description = "Document Processing service for InsightDocs - handles document processing, OCR, and image analysis"
authors = ["hbobev"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
numpy = "^1.25.2"
opencv-python-headless = "^4.8.0"
pytesseract = "^0.3.10"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
skip = [".venv", "__init__.py"]
skip_gitignore = true

[tool.mypy]
plugins = "pydantic.mypy"
exclude = ".venv"
