[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared components for the InsightDocs document processing pipeline"
authors = ["hbobev"]
packages = [{include = "**/*.py"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
pymongo = "^4.5.0"
motor = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
