[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared components for InsightDocs - common utilities, models, and configurations"
authors = ["hbobev"]
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
skip = [".venv", "__init__.py"]
skip_gitignore = true

[tool.mypy]
plugins = "pydantic.mypy"
exclude = ".venv"
