[tool.poetry]
name = "task_orchestration"
version = "0.1.0"
description = "Task orchestration service for the InsightDocs document processing pipeline"
authors = ["hbobev"]
packages = [{include = "**/*.py"}]

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.3.4"
redis = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
